--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,4 @@
----
-title: "YOUR-TITLE"
-date: 2021-04-15
----
+title: boring
 author: Vincent
 email: whatever@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
